[package]
name = "assets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98" }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142" }
tracing = { version = "0.1.41" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.19" }
