[package]
name = "assets"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98" }
async-graphql = {version = "7.0.17", features = ["chrono", "dynamic-schema", "graphiql", "playground", "tracing"] }
async-graphql-axum = { version = "7.0.17" }
axum = { version = "0.8.4" }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive"] }
duckdb = { version = "1.3.2", features = ["bundled", "chrono", "r2d2"] }
r2d2 = { version = "0.8.10" }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142" }
tokio = { version = "1.47.1", features = ["fs", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["cors", "timeout", "trace"] }
tracing = { version = "0.1.41" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.19" }
uuid = { version = "1.18.0", features = ["serde"] }
